Home Page additions and some initial routing

--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -1,3 +1,10 @@
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
 .logo {
   height: 60px;
   width: 60px;
@@ -6,14 +13,13 @@
   cursor: pointer;
 }
 
-.header {
-  background-color: rgba(255, 255, 255, 0.877);
-  font-size: calc(10px + 2vmin);
+.banner {
+  background-color: white;
   color: black;
   border-bottom: 1px solid grey;
 }
 
-.header .title {
+.banner .title {
     left: 45%;
     position: absolute;
     margin-top: 15px;
@@ -37,4 +43,10 @@ strong {
     background-color: #21a1af;
     height: 4px;
     margin-bottom: 6px;
+}
+
+nav {
+    background-color: #eee;
+    font-size: 16px;
+    border-bottom: 1px solid grey;
 }
