--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,4 @@
-
+body {
+    background-image: url(http://www.dreamtemplate.com/dreamcodes/bg_images/color/c4.jpg);
+    background-attachment: fixed;
+}
