--- a/src/howItWorks/howItWorks.css
+++ b/src/howItWorks/howItWorks.css
@@ -2,3 +2,23 @@
     color: white;
     padding-top: 137px;
 }
+
+#meg-campaign-video {
+    border: none;
+    height: 400px;
+}
+
+.section {
+    margin-top: 20px;
+}
+
+.section img {
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 0px;
+}
+
+.how-it-works-header {
+    margin-top: auto;
+    margin-bottom: auto;
+}
