--- a/src/pageContent/PageContent.css
+++ b/src/pageContent/PageContent.css
@@ -42,9 +42,30 @@ img {
     border: 1px solid black;
 }
 
-#learn-more {
+.buttons {
+    display: flex;
+}
+
+.buttons button{
+    width: 300px;
+    text-align: center;
+}
+
+#learn-more, #get-the-app {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     margin-bottom: 20px;
+}
+
+.submit {
+    background-color: black;
+    border: 1px white solid;
+    color: white;
+}
+
+.back {
+    background-color: white;
+    color: grey;
+    border: 1px solid grey;
 }
