Updated Error messages for registering and logging in

--- a/src/header/accountModals/registerModal/RegisterModal.css
+++ b/src/header/accountModals/registerModal/RegisterModal.css
@@ -4,3 +4,10 @@
     color: #21a1af;
     font-weight: bold;
 }
+
+.error-msg {
+    display: none;
+    font-size: 12px;
+    color: red;
+    font-weight: 500;
+}
