Login and Register with backends implemented

--- a/src/header/navbar/Navbar.css
+++ b/src/header/navbar/Navbar.css
@@ -3,3 +3,7 @@
     font-size: 16px;
     border-bottom: 1px solid grey;
 }
+
+.navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link {
+    color: #21a1af;
+}
