--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -1,3 +1,7 @@
+#website-title {
+    color: #21a1af;
+}
+
 .sticky {
     position: fixed;
     top: 0;
@@ -24,6 +28,8 @@
     position: absolute;
     margin-top: 15px;
     font-size: 32px;
+    color: #21a1af;
+    font-weight: 500;
 }
 
 strong {
