Update register modals and updated blog posts interface

--- a/src/about/About.css
+++ b/src/about/About.css
@@ -3,10 +3,10 @@
 }
 
 .about p {
-    border: 1px solid grey;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
-    background-color: rgb(48, 45, 45);
+    background-color: rgba(13, 161, 175, 0.3);
 }
 
 .about-header {
