--- a/src/header/navbar/Navbar.css
+++ b/src/header/navbar/Navbar.css
@@ -7,3 +7,13 @@
 .navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link {
     color: #21a1af;
 }
+
+.search {
+    float: right;
+}
+
+@media screen and (max-width: 768px) {
+    .search {
+        display: none;
+    }
+}
