--- a/src/howItWorks/howItWorks.css
+++ b/src/howItWorks/howItWorks.css
@@ -2,6 +2,10 @@
     color: white;
 }
 
+iframe {
+    width: fit-content;
+}
+
 #meg-campaign-video {
     border: none;
     height: 400px;
@@ -20,4 +24,11 @@
 .how-it-works-header {
     margin-top: auto;
     margin-bottom: auto;
+}
+
+@media screen and (max-width: 767px) {
+    .how-it-works-header {
+        margin-bottom: 20px;
+        text-align: center;
+    }
 }
