--- a/src/about/About.css
+++ b/src/about/About.css
@@ -19,6 +19,15 @@
     margin-bottom: 20px;
 }
 
+@media screen and (max-width: 768px) {
+    #our-team-photo {
+        max-width: 85%;
+    }
+    .about-us {
+        text-align: center;
+    }
+}
+
 #our-team-photo {
     margin-left: auto;
     margin-right: auto;
