Update mobile header and footer

--- a/src/about/About.css
+++ b/src/about/About.css
@@ -22,6 +22,7 @@
 @media screen and (max-width: 768px) {
     #our-team-photo {
         max-width: 85%;
+        margin-bottom: 30px;
     }
     .about-us {
         text-align: center;
