--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@ body {
     padding-top: 137px;
 }
 
+@media screen and (max-width: 991px) {
+    .page-content {
+        padding-top: 80px;
+    }
+}
+
 input:focus, textarea:focus {
     outline: none;
 }
