--- a/src/FAQ/FAQ.css
+++ b/src/FAQ/FAQ.css
@@ -24,7 +24,7 @@
 }
 
 .FAQ-nav {
-    background-color: rgb(70, 64, 64);
+    background-color: #464040;
     padding: 2px 8px;
     border-radius: 4px;
     border: 1px solid white;
