--- a/src/header/mobileHeader/sideMenu/SideMenu.css
+++ b/src/header/mobileHeader/sideMenu/SideMenu.css
@@ -8,11 +8,9 @@
     position: fixed;
     z-index: 1;
     top: 0;
-    left: 0;
     background-color: #fff; 
     overflow-x: hidden;
     transition: 0.5s;
-    border-right: 1px solid grey;
 }
 
 .menu a {
@@ -27,7 +25,7 @@
 
 .menu #closebtn {
     position: absolute;
-    top: -8px;
+    top: -5px;
     right: 5px;
     font-size: 36px;
     margin-left: 50px;
@@ -39,7 +37,6 @@
     overflow-y: hidden;
     height: 0;
     transition: 0.5s;
-    border-right: 1px solid grey;
 }
 
 .menu .title {
@@ -58,7 +55,39 @@
     border-bottom: 1px solid darkgray;
 }
 
+#blog-link::after {
+    display: inline-block;
+    margin-left: .255em;
+    vertical-align: .255em;
+    content: "";
+    border-top: .3em solid;
+    border-right: .3em solid transparent;
+    border-bottom: 0;
+    border-left: .3em solid transparent;
+}
+
 @media screen and (max-height: 450px) {
     .menu {padding-top: 15px;}
     .menu a {font-size: 18px;}
+}
+
+@media screen and (min-width: 768px) {
+    .menu {
+        right: 0;
+        border-left: 1px solid grey;
+    }
+    .menu a {
+        text-align: left;
+    }
+    .side-menu {
+        float: right;
+        margin: auto 0px;
+        padding: 0px 5px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .menu {
+        left: 0;
+    }
 }
