--- a/src/homePage/HomePage.css
+++ b/src/homePage/HomePage.css
@@ -58,7 +58,7 @@ img {
 }
 
 .submit {
-    background-color: black;
+    background-color: #222;
     border: 1px white solid;
     color: white;
 }
