--- a/src/header/navbar/Navbar.css
+++ b/src/header/navbar/Navbar.css
@@ -9,5 +9,12 @@
 }
 
 .search {
-    float: right;
+    border: 1px solid #21a1af;
+    color: #21a1af;
+}
+
+.search:hover{
+    border-color: white;
+    background-color: #21a1af;
+    color: white;
 }
