--- a/src/blogPosts/post/Post.css
+++ b/src/blogPosts/post/Post.css
@@ -30,7 +30,6 @@
 }
 
 .author {
-    float: right;
     font-style: italic;
 }
 
@@ -42,4 +41,16 @@
 
 .comment-section {
     margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+    .author {
+        float: right;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .post h4 {
+        font-size: 20px;
+    }
 }
