--- a/src/about/About.scss
+++ b/src/about/About.scss
@@ -1,12 +1,11 @@
 .about {
     color: white;
-}
-
-.about p {
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 10px;
-    background-color: rgba(13, 161, 175, 0.3);
+    p {
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 10px;
+        background-color: rgba(13, 161, 175, 0.3);
+    }
 }
 
 .about-header {
