--- a/src/header/mobileHeader/accountMenu/AccountMenu.scss
+++ b/src/header/mobileHeader/accountMenu/AccountMenu.scss
@@ -3,14 +3,13 @@
     text-align: left;
 }
 
-.profile-icon img {
-    width: 100px;
-}
-
 .profile-icon {
     width: 40%;
     margin: 10px auto;
     color: #21a1af;
+    img {
+        width: 100px;
+    }
 }
 
 #profile-name {
