--- a/src/blogPosts/post/Post.scss
+++ b/src/blogPosts/post/Post.scss
@@ -1,5 +1,13 @@
 .post {
     margin-bottom: 1rem;
+    hr {
+        margin: 10px -15px 0px;
+        background: black;
+        height: 1px;
+    }
+    .post h4 {
+        display: inline;
+    }
 }
 
 .box {
@@ -25,18 +33,8 @@
     color: black;
 }
 
-.post h4 {
-    display: inline;
-}
-
 .author {
     font-style: italic;
-}
-
-.post hr {
-    margin: 10px -15px 0px;
-    background: black;
-    height: 1px;
 }
 
 .comment-section {
