Updated How It Works page and added scss variable

--- a/src/header/accountModals/logInModal/LogInModal.scss
+++ b/src/header/accountModals/logInModal/LogInModal.scss
@@ -1,7 +1,9 @@
+@import '../../../variables.scss';
+
 #log-in {
     display: inline;
     padding-left: 5px;
-    color: #21a1af;
+    color: $megBlue;
     font-weight: bold;
 }
 
