--- a/src/header/accountModals/registerModal/RegisterModal.scss
+++ b/src/header/accountModals/registerModal/RegisterModal.scss
@@ -1,7 +1,9 @@
+@import '../../../variables.scss';
+
 #register {
     display: inline;
     padding-right: 5px;
-    color: #21a1af;
+    color: $megBlue;
     font-weight: bold;
 }
 
