--- a/src/blogPosts/newPost/NewPost.scss
+++ b/src/blogPosts/newPost/NewPost.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .new-post-container {
     border: 1px solid black;
     border-radius: 7px;
@@ -11,7 +13,7 @@
         display: none;
     }
     .new-post-container {
-        background: #21a1af;
+        background: $megBlue;
     }
 }
 
