--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -1,12 +1,14 @@
+@import '../variables.scss';
+
 #website-title {
-    color: #21a1af;
+    color: $megBlue;
 }
 
 .sticky {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 5;
 }
 
 .logo {
@@ -25,7 +27,7 @@
 
 .banner .title {
     font-size: 32px;
-    color: #21a1af;
+    color: $megBlue;
     font-weight: 500;
     text-align: center;
     margin: auto;
@@ -53,7 +55,7 @@
 
 .hamburger {
     width: 40px;
-    background-color: #21a1af;
+    background-color: $megBlue;
     height: 4px;
     margin: 5px 0px;
 }
