--- a/src/header/accountModals/AccountModals.scss
+++ b/src/header/accountModals/AccountModals.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .modal-body {
     text-align: center;
     justify-content: center;
@@ -23,7 +25,7 @@
 
 .greeting {
     font-weight: 500;
-    color: #21a1af;
+    color: $megBlue;
     cursor: pointer;
     &:hover {
         text-decoration: underline;
