--- a/src/header/mobileHeader/sideMenu/SideMenu.scss
+++ b/src/header/mobileHeader/sideMenu/SideMenu.scss
@@ -1,3 +1,5 @@
+@import '../../../variables.scss';
+
 .side-menu {
     margin: auto 10px auto 25px;
     width: 80px;
@@ -22,14 +24,14 @@
     transition: 0.5s;
     .title {
         font-weight: bold;
-        border-bottom: 3px solid #21a1af;
+        border-bottom: 3px solid $megBlue;
         padding-top: 12px;
     }
     a {
         padding: 8px 8px 8px 12px;
         text-decoration: none;
         font-size: 25px;
-        color: #21a1af;
+        color: $megBlue;
         display: block;
         transition: 0.3s;
         border-bottom: 1px solid grey;
@@ -51,28 +53,29 @@
             padding: 8px 8px 8px 20px;
             text-decoration: none;
             font-size: 25px;
-            color: #21a1af;
+            color: $megBlue;
             display: block;
             transition: 0.3s;
             border-bottom: 1px solid darkgray;
         }
     }
-}
-
-#blog-link::after {
-    display: inline-block;
-    margin-left: .255em;
-    vertical-align: .255em;
-    content: "";
-    border-top: .3em solid;
-    border-right: .3em solid transparent;
-    border-bottom: 0;
-    border-left: .3em solid transparent;
+    #blog-link::after {
+        display: inline-block;
+        margin-left: .255em;
+        vertical-align: .255em;
+        content: "";
+        border-top: .3em solid;
+        border-right: .3em solid transparent;
+        border-bottom: 0;
+        border-left: .3em solid transparent;
+    }
 }
 
 @media screen and (max-height: 450px) {
-    .menu {padding-top: 15px;}
-    .menu a {font-size: 18px;}
+    .menu {
+        a {font-size: 18px;}
+        padding-top: 15px;
+    }
 }
 
 @media screen and (min-width: 768px) {
