--- a/src/header/mobileHeader/sideMenu/SideMenu.scss
+++ b/src/header/mobileHeader/sideMenu/SideMenu.scss
@@ -35,6 +35,7 @@
         display: block;
         transition: 0.3s;
         border-bottom: 1px solid grey;
+        white-space: nowrap;
     }
     #closebtn {
         position: absolute;
