reset header and added teamphotos to about section

--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -15,6 +15,14 @@
     z-index: 50;
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+}
+
 .logo {
     height: 60px;
     width: 60px;
