--- a/src/about/About.scss
+++ b/src/about/About.scss
@@ -1,35 +1,13 @@
 .about {
     color: white;
-    p {
-        border: 1px solid black;
-        border-radius: 5px;
-        padding: 10px;
-        background-color: rgba(13, 161, 175, 0.3);
-    }
-}
-
-.about-header {
-    margin-top: 20px;
-    text-align: center;
-}
-
-.our-team h1 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-@media screen and (max-width: 768px) {
-    #our-team-photo {
-        max-width: 85%;
-        margin-bottom: 30px;
-    }
-    .about-us {
+    .about-header {
+        margin: 30px 0px;
         text-align: center;
     }
 }
 
-#our-team-photo {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+@media screen and (max-width: 768px) {
+    .about-us {
+        text-align: center;
+    }
 }
