--- a/src/header/mobileHeader/sideMenu/SideMenu.scss
+++ b/src/header/mobileHeader/sideMenu/SideMenu.scss
@@ -90,7 +90,7 @@
     .side-menu {
         float: right;
         margin: auto 0px;
-        padding: 0px 5px;
+        padding: 0px;
         width: auto;
     }
 }
