Updated one employee's photo and added helper for mobile view

--- a/src/about/ourTeam/teamPhoto/TeamPhoto.scss
+++ b/src/about/ourTeam/teamPhoto/TeamPhoto.scss
@@ -21,8 +21,8 @@
         z-index: 4;
         transition: 0.5s;
         overflow: hidden;
-        font-size: 14px;
         .member-name {
+            font-weight: bold;
             padding-top: 10px;
             text-align: center;
         }
