--- a/src/about/ourTeam/OurTeam.scss
+++ b/src/about/ourTeam/OurTeam.scss
@@ -8,6 +8,17 @@
         display: inline-flex;
         flex-wrap: wrap;
     }
+    .mobile-info {
+        color: black;
+        position: fixed;
+        bottom: 30px;
+        left: 30px;
+        padding: 5px 8px;
+        background-color: white;
+        border: 1px solid black;
+        border-radius: 5px;
+        z-index: 20;
+    }
 }
 
 @media screen and (min-width: 992px) {
