--- a/src/blogPosts/post/comment/Comment.scss
+++ b/src/blogPosts/post/comment/Comment.scss
@@ -5,6 +5,7 @@
     margin: 0px 20px 10px;
     background-color: #222222;
     width: 66%;
+    color: white;
     hr {
         margin: 0px;
     }
