--- a/src/header/mobileHeader/sideMenu/SideMenu.scss
+++ b/src/header/mobileHeader/sideMenu/SideMenu.scss
@@ -27,6 +27,11 @@
         border-bottom: 3px solid $megBlue;
         padding-top: 12px;
     }
+    #profile-link {
+        font-weight: bold;
+        text-align: center;
+        border-bottom: 3px solid $megBlue;
+    }
     a {
         padding: 8px 8px 8px 12px;
         text-decoration: none;
