--- a/src/blogPosts/newPost/NewPost.scss
+++ b/src/blogPosts/newPost/NewPost.scss
@@ -3,7 +3,7 @@
 .new-post-container {
     border: 1px solid black;
     border-radius: 7px;
-    background: rgba(13, 167, 175, 0.3);
+    background: white;
     margin-top: 20px;
     padding: 30px 30px;
 }
@@ -12,8 +12,13 @@
     .blog-posts-header {
         display: none;
     }
-    .new-post-container {
-        background: $megBlue;
+    .new-post {
+        text-align: left;
+        .new-post-container {
+            border: none;
+            margin-top: 0px;
+            padding-left: 5px;
+        }
     }
 }
 
@@ -23,7 +28,7 @@
     }
     textarea {
         padding: 3px 5px;
-        border: 1px solid grey;
+        border: 1px solid black;
         border-radius: 5px;
     }
 }
