--- a/src/blogPosts/post/comment/Comment.scss
+++ b/src/blogPosts/post/comment/Comment.scss
@@ -27,6 +27,12 @@
     .comment-body {
         overflow: auto;
     }
+    .edit-menu {
+        svg {
+            margin-left: 3px;
+            margin-bottom: 3px;
+        }
+    }
 }
 
 @media screen and (max-width: 767px) {
