Updated ability to edit and delete posts

--- a/src/blogPosts/post/Post.scss
+++ b/src/blogPosts/post/Post.scss
@@ -21,6 +21,15 @@
     a {
         color: black;
     }
+    .edit-menu {
+        position: relative;
+        display: grid;
+        float: right;
+        svg {
+            margin-left: 3px;
+            margin-bottom: 3px;
+        }
+    }
 }
 
 .box {
