Updated Home Page and some icons while beginning to incorporate success modal popups

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body {
-    background-image: url(http://www.dreamtemplate.com/dreamcodes/bg_images/color/c4.jpg);
-    background-attachment: fixed;
+    background: #0C6284;
 }
 
 .page-content {
