--- a/src/blogPosts/post/Post.scss
+++ b/src/blogPosts/post/Post.scss
@@ -26,6 +26,7 @@
         display: grid;
         float: right;
         svg {
+            cursor: pointer;
             margin-left: 3px;
             margin-bottom: 3px;
         }
