--- a/src/header/mobileHeader/accountMenu/AccountMenu.scss
+++ b/src/header/mobileHeader/accountMenu/AccountMenu.scss
@@ -4,11 +4,8 @@
 }
 
 .profile-icon {
-    width: 40%;
-    margin: 10px auto;
-    img {
-        width: 100px;
-    }
+    width: 50%;
+    margin: 10px auto -10px;
 }
 
 #profile-name {
