--- a/src/blogPosts/BlogPosts.scss
+++ b/src/blogPosts/BlogPosts.scss
@@ -8,6 +8,34 @@
         height: 5rem;
         width: 5rem;
     }
+    .FAQ-search {
+        border: 1px solid black;
+        background-color: white;
+        border-radius: 10px;
+        padding: 5px;
+        display: inline-flex;
+        width: 40px;
+        transition: 0.5s;
+        overflow: hidden;
+        &:hover {
+            width: 300px;
+        }
+        .search-prompt {
+            margin-right: 8px;
+            height: 30px;
+            width: 30px;
+            cursor: pointer;
+        }
+        .FAQ-search-input {
+            resize: none;
+            border: 1px solid black;
+            border-radius: 5px;
+            height: 30px;
+            padding: 0px 5px;
+            width: inherit;
+        }
+        margin-bottom: 20px;
+    }
 }
 
 .posts-list {
