--- a/src/FAQ/FAQ.scss
+++ b/src/FAQ/FAQ.scss
@@ -9,6 +9,7 @@
         justify-content: center;
         list-style: none;
         display: flex;
+        text-align: center;
         .tab {
             color: white;
             font-size: 20px;
