Updated home page and side menu format

--- a/src/header/mobileHeader/sideMenu/SideMenu.scss
+++ b/src/header/mobileHeader/sideMenu/SideMenu.scss
@@ -19,7 +19,7 @@
     position: fixed;
     z-index: 1;
     top: 0;
-    background-color: #fff; 
+    background: rgba(255, 255, 255, 0.863);
     overflow-x: hidden;
     transition: 0.5s;
     .title {
@@ -51,16 +51,12 @@
         border-bottom: none;
     }
     .blog-menu {
-        background-color: #eee; 
+        background-color: rgba(230, 230, 230, 0.863); 
         overflow-y: hidden;
         height: 0;
         transition: 0.5s;
         a {
             padding: 8px 8px 8px 20px;
-            text-decoration: none;
-            font-size: 25px;
-            color: $megBlue;
-            display: block;
             transition: 0.3s;
             border-bottom: 1px solid darkgray;
         }
